redesigned SelectRoutineFragment.kt and combined SelectEditRoutineFragment.kt and SelectRunRoutineFragment.kt into SelectRoutineFragment.kt. Now you edit Routines by accessing the option in the context menu.
this code was written when i tried to listen to a speech and program simultaneously, but every time i crash, i have to take a shot. i've drunken the rest of the liqueur bottle i had, so if the code is borderline readable, i'm sorry

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -11,15 +11,12 @@
         android:label="StartFragment">
         <action
             android:id="@+id/action_startFragment_to_selectEditRoutineFragment"
-            app:destination="@id/selectEditRoutineFragment" />
-        <action
-            android:id="@+id/action_startFragment_to_selectRunRoutineFragment"
-            app:destination="@id/selectRunRoutine" />
+            app:destination="@id/selectRoutineFragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/selectEditRoutineFragment"
-        android:name="de.threateningcodecomments.routinetimer.SelectEditRoutineFragment"
+        android:id="@+id/selectRoutineFragment"
+        android:name="de.threateningcodecomments.routinetimer.SelectRoutineFragment"
         android:label="SelectRoutineFragment">
         <action
             android:id="@+id/action_selectRoutineFragment_to_startFragment"
@@ -30,6 +27,9 @@
         <action
             android:id="@+id/action_selectRoutineFragment_to_editContinuousRoutineFragment"
             app:destination="@id/editContinuousRoutineFragment" />
+        <action
+            android:id="@+id/action_selectEditRoutineFragment_to_runContinuousRoutine"
+            app:destination="@id/runContinuousRoutine" />
     </fragment>
     <fragment
         android:id="@+id/editSequentialRoutineFragment"
@@ -38,10 +38,10 @@
         tools:layout="@layout/fragment_edit_sequential_routine">
         <action
             android:id="@+id/action_editSequentialRoutineFragment_to_selectRoutineFragment"
-            app:destination="@id/selectEditRoutineFragment" />
+            app:destination="@id/selectRoutineFragment" />
         <argument
-            android:name="routinePosition"
-            app:argType="integer" />
+            android:name="routineUid"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/editContinuousRoutineFragment"
@@ -50,21 +50,10 @@
         tools:layout="@layout/fragment_edit_continuous_routine">
         <action
             android:id="@+id/action_editContinuousRoutineFragment_to_selectRoutineFragment"
-            app:destination="@id/selectEditRoutineFragment" />
+            app:destination="@id/selectRoutineFragment" />
         <argument
             android:name="routineUID"
             app:argType="string" />
-    </fragment>
-    <fragment
-        android:id="@+id/selectRunRoutine"
-        android:name="de.threateningcodecomments.routinetimer.SelectRunRoutineFragment"
-        android:label="SelectRunRoutine">
-        <action
-            android:id="@+id/action_selectRunRoutine_to_startFragment"
-            app:destination="@id/startFragment" />
-        <action
-            android:id="@+id/action_selectRunRoutine_to_runContinuousRoutine"
-            app:destination="@id/runContinuousRoutine" />
     </fragment>
     <fragment
         android:id="@+id/runContinuousRoutine"
@@ -72,7 +61,10 @@
         android:label="fragment_run_continuous_routine"
         tools:layout="@layout/fragment_run_continuous_routine">
         <action
-            android:id="@+id/action_runContinuousRoutine_to_selectRunRoutine"
-            app:destination="@id/selectRunRoutine" />
+            android:id="@+id/action_runContinuousRoutine_to_selectEditRoutineFragment"
+            app:destination="@id/selectRoutineFragment" />
+        <argument
+            android:name="routineUid"
+            app:argType="string" />
     </fragment>
 </navigation>
