--- a/app/src/main/res/layout/fragment_run_continuous_routine.xml
+++ b/app/src/main/res/layout/fragment_run_continuous_routine.xml
@@ -1,14 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_RunRoutine_continuous_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RunContinuousRoutine">
+    android:animateLayoutChanges="true"
+    android:fitsSystemWindows="true"
+    android:transitionName="editCRoutineRoot"
+    tools:context=".EditContinuousRoutineFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/iv_RunRoutine_continuous_close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15sp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_close"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearance="@style/circleImageView" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</FrameLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/et_RunRoutine_continuous_routine_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30sp"
+            android:text="@string/str_tv_RunRoutine_continuous_routineName"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:transitionName="editCRoutineName" />
+
+        <LinearLayout
+            android:id="@+id/ll_RunRoutine_continuous_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/relatedElementsSpacing"
+            android:animateLayoutChanges="true"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ll_RunRoutine_continuous_firstRow"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:animateLayoutChanges="true">
+
+                <include
+                    android:id="@+id/tile_RunRoutine_continuous_0"
+                    layout="@layout/viewholder_run_tile"
+                    android:layout_width="0sp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toStartOf="@id/tile_RunRoutine_continuous_1"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <include
+                    android:id="@+id/tile_RunRoutine_continuous_1"
+                    layout="@layout/viewholder_run_tile"
+                    android:layout_width="0sp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tile_RunRoutine_continuous_0" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ll_RunRoutine_continuous_secondRow"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:animateLayoutChanges="true">
+
+                <include
+                    android:id="@+id/tile_RunRoutine_continuous_2"
+                    layout="@layout/viewholder_run_tile"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toStartOf="@id/tile_RunRoutine_continuous_3"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <include
+                    android:id="@+id/tile_RunRoutine_continuous_3"
+                    layout="@layout/viewholder_run_tile"
+                    android:layout_width="0sp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/tile_RunRoutine_continuous_2" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ll_RunRoutine_continuous_thirdRow"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:animateLayoutChanges="true">
+
+                <include
+                    android:id="@+id/tile_RunRoutine_continuous_4"
+                    layout="@layout/viewholder_run_tile"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toStartOf="@id/tile_RunRoutine_continuous_5"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <include
+                    android:id="@+id/tile_RunRoutine_continuous_5"
+                    layout="@layout/viewholder_run_tile"
+                    android:layout_width="0sp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/tile_RunRoutine_continuous_4" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ll_RunRoutine_continuous_fourthRow"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:animateLayoutChanges="true">
+
+                <include
+                    android:id="@+id/tile_RunRoutine_continuous_6"
+                    layout="@layout/viewholder_run_tile"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toStartOf="@id/tile_RunRoutine_continuous_7"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+
+                <include
+                    android:id="@+id/tile_RunRoutine_continuous_7"
+                    layout="@layout/viewholder_run_tile"
+                    android:layout_width="0sp"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/tile_RunRoutine_continuous_6" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
