--- a/app/src/main/res/layout/viewholder_run_tile.xml
+++ b/app/src/main/res/layout/viewholder_run_tile.xml
@@ -30,6 +30,21 @@
                 android:paddingHorizontal="20sp"
                 android:paddingVertical="15sp">
 
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_viewholder_runTile_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:maxLines="2"
+                    android:text="Tile name!"
+                    android:textAlignment="center"
+                    android:textSize="15sp" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="0sp"
+                    android:layout_weight="0.02" />
+
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/iv_viewholder_runTile_icon"
                     android:layout_width="50sp"
@@ -41,84 +56,74 @@
                 <Space
                     android:layout_width="wrap_content"
                     android:layout_height="0sp"
-                    android:layout_weight="0.02" />
+                    android:layout_weight="0.2" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_viewholder_runTile_name"
+                    android:id="@+id/tv_viewholder_runTile_totalTimeMain"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:maxLines="2"
-                    android:text="Tile name!"
-                    android:textAlignment="center"
-                    android:textSize="15sp" />
+                    android:text="01:32:12"
+                    android:textAlignment="center" />
 
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_viewholder_runTile_countdownRoot"
+                android:id="@+id/cl_viewholder_runTile_timeLayout"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
                 android:layout_weight="1"
-                android:visibility="gone">
+                android:orientation="vertical"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl_viewholder_runTile_timeLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="0sp"
-                    android:layout_alignParentBottom="true"
-                    android:orientation="vertical"
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_viewholder_runTile_currentTimeInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/str_tv_viewholder_runTile_currentTime"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    app:layout_constraintBottom_toTopOf="@id/tv_viewholder_runTile_currentTime"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_viewholder_runTile_currentTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="20:00"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toTopOf="@id/tv_viewholder_runTile_totalTimeInfo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_viewholder_runTile_currentTimeInfo" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_viewholder_runTile_totalTimeInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total time:"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/tv_viewholder_runTile_totalTime"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_viewholder_runTile_currentTime" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_viewholder_runTile_totalTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="20:00"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_viewholder_runTile_currentTimeInfo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/str_tv_viewholder_runTile_currentTime"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                        app:layout_constraintBottom_toTopOf="@id/tv_viewholder_runTile_currentTime"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_viewholder_runTile_currentTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="20:00"
-                        android:textSize="18sp"
-                        app:layout_constraintBottom_toTopOf="@id/tv_viewholder_runTile_totalTimeInfo"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_viewholder_runTile_currentTimeInfo" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_viewholder_runTile_totalTimeInfo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Total time:"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/tv_viewholder_runTile_totalTime"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_viewholder_runTile_currentTime" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_viewholder_runTile_totalTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="20:00"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_viewholder_runTile_totalTimeInfo" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                    app:layout_constraintTop_toBottomOf="@+id/tv_viewholder_runTile_totalTimeInfo" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
